[package]
name = "client"
version = "0.1.0"
authors = ["finn79426 <finn79426@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
futures = "0.3.31"
gloo-net = { version = "0.6.0", features = ["websocket"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
